--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -9,7 +9,8 @@
             <a class="brand" href="{{ path('pablo_user_homepage') }}">Accueil</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li><a href="{{ path('pablo_student_list') }}">&Eacute;lèves </a></li>
+                    <li><a href="{{ path('pablo_student_list') }}">&Eacute;lèves</a></li>
+                    <li><a href="{{ path('pablo_teacher_list') }}">Professeurs</a></li>
                 </ul>
                 <ul class="nav pull-right">
                     <li><a href="{{ path('pablo_user_logout') }}"><i class="icon-white icon-off"></i> D&eacute;connexion</a></li>
