--- a/src/Pablo/PeopleBundle/Resources/views/Comment/_comments.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Comment/_comments.html.twig
@@ -1,6 +1,6 @@
 <div class="span6">
     <h4>Commentaires</h4>
-    {% for comment in student.comments %}
+    {% for comment in person.comments %}
         <blockquote>
             <div class="pull-right">
                 <a class="btn btn-mini" href="{{ path('pablo_comment_edit', {'id': comment.id}) }}"><i class="icon-pencil"></i></a>
@@ -14,11 +14,11 @@
         <div class="alert alert-info">
             <h4 class="alert-heading">Aucun résulat</h4>
             <p>
-                Il n&apos;y a actuellement aucune remarque enregistr&eacute;e pour cet &eacute;l&egrave;ve.
+                Il n&apos;y a actuellement aucun commentaire enregistr&eacute;.
             </p>
         </div>
     {% endfor %}
     <p>
-        <a class="btn" href="{{ path('pablo_comment_add', {'id': student.id}) }}">ajouter un commentaire</a>
+        <a class="btn" href="{{ path('pablo_comment_add', {'id': person.id}) }}">ajouter un commentaire</a>
     </p>
 </div>
