--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,6 +20,7 @@
         <!--[if lt IE 9]>
         <script src="{{ asset('assets/js/html5shiv.js') }}"></script>
         <![endif]-->
+        <link href="{{ asset('assets/css/jquery-ui-1.10.3.css') }}" rel="stylesheet">
     {% endblock %}
     <!-- Fav and touch icons -->
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -32,7 +33,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{ asset('assets/js/jquery-1.10.1.js') }}" type="text/javascript"></script>
     <script src="{{ asset('assets/js/bootstrap.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/jquery-ui-1.10.3.js') }}" type="text/javascript"></script>
     <script src="{{ asset('assets/js/pablo.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/jquery.ui.datepicker-fr.js') }}" type="text/javascript"></script>
 {% endblock %}
 </body>
 </html>
