--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="{{ path('pablo_user_homepage') }}">Accueil</a>
+            <a class="brand" href="{{ path('pablo_user_home') }}">Accueil</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li><a href="{{ path('pablo_student_list') }}">&Eacute;lèves</a></li>
