--- a/src/Pablo/PeopleBundle/Resources/views/Teacher/edit.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Teacher/edit.html.twig
@@ -70,4 +70,13 @@
             autosuggest('{{ path('pablo_country_json') }}', '.country-selector');
         })
     </script>
+    <script type="text/javascript">
+        $('.date-selector').datepicker({
+            changeMonth: true,
+            changeYear: true,
+            yearRange: "-90:-6",
+            minDate: "-90y",
+            maxDate: new Date(new Date().getFullYear() - 6, 11, 31)
+        });
+    </script>
 {% endblock %}
