--- a/src/Pablo/PeopleBundle/Resources/views/Student/result.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Student/result.html.twig
@@ -5,13 +5,7 @@
         <h2>Liste des &eacute;l&egrave;ves</h2>
     </div>
     <div class="row">
-        <div class="span12">
-            <form class="form-inline" action="{{ path('pablo_student_search') }}" method="post">
-                <input class="span5" type="text" name="lastName" placeholder="Nom">
-                <input class="span5" type="text" name="firstName" placeholder="Pr&eacute;nom">
-                <button class="btn pull-right" type="submit"><i class="icon-search"></i>&nbsp;rechercher</button>
-            </form>
-        </div>
+        {% include('PabloPeopleBundle:Student:_search.html.twig') %}
     </div>
     {% if (not students) %}
         <div class="alert alert-info">
